add :createa react struture

--- a/Backend/HandloomElegance.Api/HandloomElegance.Api.csproj
+++ b/Backend/HandloomElegance.Api/HandloomElegance.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
@@ -18,5 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\HandloomElegance.Core\HandloomElegance.Core.csproj" />
   </ItemGroup>
+
+
 
 </Project>
