--- a/Backend/HandloomElegance.Core/HandloomElegance.Core.csproj
+++ b/Backend/HandloomElegance.Core/HandloomElegance.Core.csproj
@@ -4,6 +4,13 @@
     <ProjectReference Include="..\HandloomElegance.Data\HandloomElegance.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
+  </ItemGroup>
+    <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
